# TuyaOpen

./: .gitignore  AGENTS.md  MACOS_T5AI_DRIVER_NOTES.md  export.sh
.github/workflows/: check-build-apps.yml
apps/aliyun_cloud/aliyun_demo/: CMakeLists.txt  README.md
apps/aliyun_cloud/aliyun_demo/include/: aliyun_test_api.h
apps/aliyun_cloud/aliyun_demo/src/: aliyun_user.c  hello_world.c  tuya_main.c
apps/mimiclaw/: CMakeLists.txt  README.md  README_zh.md  app_default.config  mimi.c  mimi_base.h  mimi_config.h  mimi_secrets.h.example  tls_cert_bundle.c  tls_cert_bundle.h
apps/mimiclaw/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
apps/mimiclaw/bus/: message_bus.c  message_bus.h
apps/mimiclaw/certs/: ca-bundle-mini.pem  ca_bundle_mini.c  ca_bundle_mini.h
apps/mimiclaw/channels/: discord_bot.c  discord_bot.h  feishu_bot.c  feishu_bot.h  telegram_bot.c  telegram_bot.h
apps/mimiclaw/cli/: serial_cli.c  serial_cli.h
apps/mimiclaw/config/: Linux.config  T5AI.config
apps/mimiclaw/cron/: cron_service.c  cron_service.h
apps/mimiclaw/gateway/: ws_server.c  ws_server.h
apps/mimiclaw/heartbeat/: heartbeat.c  heartbeat.h
apps/mimiclaw/llm/: llm_proxy.c  llm_proxy.h
apps/mimiclaw/memory/: memory_store.c  memory_store.h  session_mgr.c  session_mgr.h
apps/mimiclaw/proxy/: http_proxy.c  http_proxy.h
apps/mimiclaw/skills/: skill_loader.c  skill_loader.h
apps/mimiclaw/tools/: tool_cron.c  tool_cron.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_registry.c  tool_registry.h  tool_web_search.c  tool_web_search.h
apps/mimiclaw/wifi/: wifi_manager.c  wifi_manager.h
apps/tuya.ai/ai_components/: CMakeLists.txt  Kconfig
apps/tuya.ai/ai_components/ai_audio/: Kconfig
apps/tuya.ai/ai_components/ai_picture/: Kconfig
apps/tuya.ai/ai_components/ai_ui/: Kconfig
apps/tuya.ai/duo_eye_mood/: Kconfig
apps/tuya.ai/duo_eye_mood/config/: TUYA_T5AI_BOARD_EYES.config  TUYA_T5AI_BOARD_EYES_TWO_LCD.config
apps/tuya.ai/your_chat_bot/: Kconfig  app_default.config
apps/tuya.ai/your_chat_bot/config/: ESP32S3_BREAD_COMPACT_WIFI.config  T5AI_MINI_LCD_1.54.config  T5AI_MOJI_1.28.config  TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  TUYA_T5AI_BOARD_LCD_3.5_v101.config  TUYA_T5AI_CORE.config  TUYA_T5AI_EVB.config  WAVESHARE_T5AI_TOUCH_AMOLED_1_75.config  XINGZHI_ESP32S3_Cube_0_96OLED_WIFI.config
apps/tuya.ai/your_chat_bot/src/: app_chat_bot.c  tuya_main.c
apps/tuya.ai/your_otto_robot/: CMakeLists.txt  Kconfig  app_default.config
apps/tuya.ai/your_otto_robot/config/: T5AI_OTTO_LCD_GC9D01.config  T5AI_OTTO_LCD_ST7735S.config  T5AI_OTTO_LCD_ST7789.config
apps/tuya.ai/your_otto_robot/src/: app_chat_bot.c  tuya_main.c
apps/tuya.ai/your_otto_robot/src/otto/: otto_robot_main.c
apps/tuya.ai/your_otto_robot/src/ui/src/: app_ui_eyes.c
apps/tuya.ai/your_serial_chat_bot/: Kconfig
apps/tuya_t5_eink_nfc/tuya_t5_eink_badge_template/: app_default.config
apps/tuya_t5_pocket/: README_zh.md
apps/tuya_t5_pocket/tuya_t5_pocket_ai/: CMakeLists.txt  Kconfig  app_default.config
boards/ESP32/DNESP32S3_BOX/: DNESP32S3-BOX.c
boards/ESP32/ESP32S3_BREAD_COMPACT_WIFI/: esp32s3_bread_compact_wifi.c
boards/ESP32/WAVESHARE_ESP32C6_DEV_KIT_N16/: Kconfig  board_com_api.c
boards/ESP32/WAVESHARE_ESP32S3_Touch_AMOLED_1.8/: Kconfig
boards/ESP32/XINGZHI_ESP32S3_CUDE_0.96_OLED_WIFI/: xingzhi-cube-0.96-oled-wifi.c
boards/ESP32/common/: CMakeLists.txt
boards/LINUX/: TKL_Kconfig
boards/LINUX/Raspberry_Pi/: CMakeLists.txt  Kconfig  board_com_api.c  tdd_camera_v4l2.c  tdd_camera_v4l2.h
boards/T5AI/: Kconfig  OS_SERVICE_Kconfig  TKL_Kconfig
boards/T5AI/ATK_T5AI_MINI_BOARD/: board_ex_module.c  board_ex_module.h
boards/T5AI/T5AI_MINI/: t5ai_mini.c
boards/T5AI/T5AI_OTTO/: t5ai_otto.c
boards/T5AI/TUYA_T5AI_BOARD/: Kconfig  tuya_t5ai_ex_module.c  tuya_t5ai_ex_module.h
boards/T5AI/TUYA_T5AI_EINK_NFC/: Kconfig  board_charge_detect_api.c  board_charge_detect_api.h  board_com_api.h  board_power_domain_api.c  board_power_domain_api.h  tuya_t5ai_eink_nfc.c
boards/T5AI/TUYA_T5AI_EVB/: Kconfig  tuya_t5ai_evb.c
boards/T5AI/TUYA_T5AI_POCKET/: Kconfig  board_axp2101_api.c  board_axp2101_api.h  board_axp2101_reg.h  tuya_t5ai_pocket.c
docs/: bidirectional-av-streaming-terminal-report.md  home-assistant-integration-report_zh.md
examples/graphics/lvgl_demo/: app_default.config
examples/peripherals/display/: CMakeLists.txt
platform/: platform_config.yaml
src/libaliyun_sdk/: CMakeLists.txt
src/libaliyun_sdk/include/: aliyun_test_api.h  lib_c_mmi.h  lib_c_mmi_cmd.h  lib_c_mmi_config.h  lib_c_mmi_msg.h  lib_c_mmi_vl.h  lib_c_sdk.h  lib_c_storage.h
src/libaliyun_sdk/include/c_utils/: c_utils.h  hal_util_mem.h  hal_util_mutex.h  hal_util_random.h  hal_util_storage.h  hal_util_time.h  util_list.h  util_log.h  util_ringbuffer.h  util_string.h  util_type_trans.h
src/libaliyun_sdk/src/: aliyun_test_api.c  hal_util_mem.c  hal_util_mutex.c  hal_util_random.c  hal_util_storage.c  hal_util_time.c  util_log_impl.c
src/libhelix/: CMakeLists.txt
src/libhelix/include/: mp3dec.h
src/libhelix/src/: buffers.c  dqchan.c  scalfact.c
src/libhttp/: CMakeLists.txt
src/libhttp/coreHTTP/: core_http_config.h
src/libhttp/include/: http_session.h
src/libhttp/src/: http_session.c
src/liblvgl/conf/: lv_conf.h
src/libtls/: Kconfig
src/libtls/port/: tuya_tls_config.h
src/peripherals/button/: Kconfig
src/tal_driver/dma2d/: tal_dma2d.c  tal_dma2d.h
src/tal_kv/src/: tal_kv.c
src/tal_system/include/: tal_log.h  tal_memory.h
src/tal_system/src/: tal_log.c
src/tuya_cloud_service/: CMakeLists.txt
src/tuya_cloud_service/cloud/: mqtt_service.c  mqtt_service.h  tuya_device_meta.c  tuya_device_meta.h  tuya_device_timer.c  tuya_device_timer.h  tuya_iot.c  tuya_mqtt_dispatch.c  tuya_mqtt_dispatch.h
src/tuya_cloud_service/netcfg/: ap_netcfg.c
src/tuya_cloud_service/netmgr/: netconn_wifi.c  netmgr.c
src/tuya_cloud_service/schema/: dp_schema.c  dp_schema.h
tools/cli_command/: cli_flash.py  cli_monitor.py
(+119 files in other folders)
